# ComputerGraphics

./: CMakeLists.txt  DataModel.cpp  DataModel.h  Facets.cpp  Facets.h  Pencil.cpp  Pencil.h  Surface.cpp  Surface.h  camera.cpp  camera.h  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  main.cpp  matrix.cpp  matrix.h  rectangle.cpp  rectangle.h  resources.qrc
qml/: lab1.qml  lab3.qml  lab4.qml  main.qml
